Add maintenance reminder to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -14,6 +14,7 @@
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- TODO: improve accessibility -->
