--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -13,6 +13,7 @@
   <!-- Favicon configuration for browser tab display -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
+<!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
