Add maintenance reminder to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -16,6 +16,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
