Note optimization potential in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -15,6 +15,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
   <title>LukehalleyPortfolio</title>
 <!-- Enhancement: add SEO metadata -->
   <base href="/">
