Document refactoring opportunity in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+<!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
   <title>LukehalleyPortfolio</title>
   <base href="/">
