--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -15,6 +15,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+<!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 </head>
