Note optimization potential in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -6,6 +6,7 @@
   <title>LukehalleyPortfolio</title>
   <base href="/">
   <!-- Favicon configuration for browser tab display -->
+<!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
