--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
   <app-root></app-root>
 </body>
 </html>
