--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -14,6 +14,7 @@
 <!-- Note: consider responsive design -->
 </head>
 <body>
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
   <app-root></app-root>
