Document refactoring opportunity in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -13,6 +13,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
   <title>LukehalleyPortfolio</title>
+<!-- Enhancement: add SEO metadata -->
   <base href="/">
 <!-- Note: consider responsive design -->
   <!-- Favicon configuration for browser tab display -->
