Add code review comment to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -6,6 +6,7 @@
   <title>LukehalleyPortfolio</title>
   <base href="/">
   <!-- Favicon configuration for browser tab display -->
+<!-- Note: consider responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- TODO: improve accessibility -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
