Add code review comment to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -10,6 +10,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
+<!-- Enhancement: add SEO metadata -->
   <title>LukehalleyPortfolio</title>
   <base href="/">
   <!-- Favicon configuration for browser tab display -->
