Add performance note to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -17,6 +17,7 @@
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
