--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
+<!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
   <title>LukehalleyPortfolio</title>
   <base href="/">
