--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -14,6 +14,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
