--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -14,6 +14,7 @@
 <!-- Enhancement: add SEO metadata -->
   <title>LukehalleyPortfolio</title>
   <base href="/">
+<!-- Note: consider responsive design -->
   <!-- Favicon configuration for browser tab display -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
