Add maintenance reminder to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -16,6 +16,7 @@
 <!-- Note: consider responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- TODO: improve accessibility -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
