Note optimization potential in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -5,6 +5,7 @@
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
 <!-- Enhancement: add SEO metadata -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
   <title>LukehalleyPortfolio</title>
   <base href="/">
