--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -7,6 +7,7 @@
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
