--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
   <!-- Favicon configuration for browser tab display -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- TODO: improve accessibility -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
