Add code review comment to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -9,6 +9,7 @@
   <!-- Portfolio website showcasing software development projects -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
