Document refactoring opportunity in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -9,6 +9,7 @@
 <!-- Note: consider responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- TODO: improve accessibility -->
+<!-- Enhancement: add SEO metadata -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <!-- Note: consider responsive design -->
 </head>
