Document refactoring opportunity in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
 <!-- Enhancement: add SEO metadata -->
+<!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
