--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -5,6 +5,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
+<!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- Note: consider responsive design -->
