Add maintenance reminder to index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
+<!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
