Improve inline documentation for index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -16,6 +16,7 @@
 <body>
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
+<!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
   <app-root></app-root>
 </body>
