Improve inline documentation for index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -6,6 +6,7 @@
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
+<!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
 <!-- Enhancement: add SEO metadata -->
