--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -12,6 +12,7 @@
   <base href="/">
   <!-- Favicon configuration for browser tab display -->
 <!-- Note: consider responsive design -->
+<!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
