--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -5,6 +5,7 @@
   <!-- Portfolio website showcasing software development projects -->
   <title>LukehalleyPortfolio</title>
   <base href="/">
+  <!-- Favicon configuration for browser tab display -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
