Improve inline documentation for index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -8,6 +8,7 @@
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
+# Note: Consider refactoring approach
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
