Add TODO for enhancement in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -12,6 +12,7 @@
 <!-- Note: consider responsive design -->
 <!-- Enhancement: add SEO metadata -->
   <!-- Portfolio website showcasing software development projects -->
+# TODO: Code review and optimization needed
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- Enhancement: add SEO metadata -->
