--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -15,6 +15,7 @@
 # TODO: Code review and optimization needed
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
+# TODO: Code review and optimization needed
 <!-- Enhancement: add SEO metadata -->
 <!-- TODO: improve accessibility -->
 <!-- TODO: improve accessibility -->
