Add TODO for enhancement in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
 <!-- Enhancement: add SEO metadata -->
+# TODO: Code review and optimization needed
 <!-- Enhancement: add SEO metadata -->
 # Note: Consider refactoring approach
 <!-- TODO: improve accessibility -->
