Add TODO for enhancement in index.html

--- a/lukehalleyPortfolio/src/index.html
+++ b/lukehalleyPortfolio/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
 <!-- Enhancement: add SEO metadata -->
 <!-- Enhancement: add SEO metadata -->
+# Note: Consider refactoring approach
 <!-- TODO: improve accessibility -->
 <!-- Note: consider responsive design -->
 <!-- TODO: improve accessibility -->
